<resources>
    <string name="app_name">Filtar</string>
    <string name="wait">Wait</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="we_sent_an_code_to_verify_yor_phone">We sent an code to verify yor phone</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="verify">Verify</string>
    <string name="let_s_start">Start</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="merchant_name">Merchant name</string>
    <string name="store_name">Store Name</string>
    <string name="id_photo">ID photo</string>
    <string name="profile">Profile</string>
    <string name="store">Store</string>
    <string name="explanations">Explanations</string>
    <string name="More">More</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="latest_product">Latest products in the store</string>
    <string name="no_products_to_show">No Product Found</string>
    <string name="latest_explanation">latest explanations</string>
    <string name="resend">Resend</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="egypt">Egypt</string>
    <string name="welcome_to_the_application_filter">Welcome to the application <font color="#0285CE">Filter</font></string>
    <string name="please_choose_user_type">Please Choose User Type...</string>
    <string name="user">User</string>
    <string name="enjoy_alert_services_for_filter_change_dates_as_well_as_purchase_from_the_store">Enjoy alert services \n for filter change dates as well as \n purchase from the store.</string>
    <string name="merchant">Merchant</string>
    <string name="sell_your_product">Sell your products from filters \n spare parts, accessories \n and more through our application.</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="sign_up">Signup</string>
    <string name="gallery">معرض الصور</string>
    <string name="camera">كاميرا</string>
    <string name="cancel">الغاء</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="commercial">Commercial Register</string>
    <string name="tax_num">Tax Number</string>
    <string name="mb">MB</string>
    <string name="please_enter_your_filter_data">Please enter your  data <font color="#0285CE">Filter</font></string>
    <string name="num_of_stages">Number Of Stages</string>
    <string name="water_quality">Water Quality</string>
    <string name="remmber_date">Do you remember the date of the last change?</string>
    <string name="based_on_the_data_entered_we_will_send_you_alerts_of_change_dates_to_maintain_your_health">Based on the data entered, we will send you alerts \n of change dates to maintain your health.</string>
    <string name="medium">Medium</string>
    <string name="first_Candle">First Candle:</string>
    <string name="seconde_Candle">Seconed Candle:</string>
    <string name="th_Candle">Third Candle:</string>
    <string name="four_Candle">Fourth Candle:</string>
    <string name="fif_Candle">Fifth Candle:</string>
    <string name="six_Candle">Sixth Candle:</string>
    <string name="sev_Candle">Sevnth Candle:</string>
    <string name="day">Day</string>
    <string name="addfilter">Add Filter</string>
    <string name="low">Low</string>
    <string name="select">Select</string>
    <string name="filter_suc">Filter Add Sucess</string>
    <string name="good">good</string>
    <string name="ch_date">Choose All Dates  Of Candels</string>
    <string name="skip">Skip</string>
    <string name="ok">Ok</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy</string>
    <string name="follow_us">Follow US</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="start">Start</string>
    <string name="hey_you">Hey, you</string>
    <string name="in_filter_app">"In the filter application "</string>
    <string name="first_app">The first application in the Arab world specialized in filters and water purification</string>
    <string name="know_you">I know you</string>
    <string name="busy">always busy</string>
    <string name="we_think">And that\'s why we think about the dates for changing your filter in order to maintain your health</string>
    <string name="market">Market</string>
    <string name="buy_online">You can buy online</string>
    <string name="shop_buy">Easily shop and buy the filter or spare parts from merchants on our application</string>
    <string name="next_date">Next change date:</string>
    <string name="month">Month</string>
    <string name="logout">Logout</string>
    <string name="my_orders">My Orders</string>
    <string name="my_filter">My Filter</string>
    <string name="filter_setting">Filter Setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="field_required">Field Required</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="suc">Sucess</string>
    <string name="the_plugs_to_be_changed_in_the_filter">The plugs to be changed in the filter</string>
    <string name="num">Num</string>
    <string name="search_for_what">Search For What</string>
    <string name="filter">Filter According To</string>
    <string name="price">Price</string>
    <string name="maximum">Maximum</string>
    <string name="minimum">minimum</string>
    <string name="specifications">"Specifications "</string>
    <string name="add_to_cart">Add To Card</string>
    <string name="see_all">See All</string>
    <string name="egp">EGP</string>
    <string name="blog_details">Blog Detials</string>
    <string name="share_with">"Share With : "</string>
    <string name="no_notifications_to_show">No Notification Show</string>
    <string name="notifications">Noyifications</string>
    <string name="hour">Hour</string>
    <string name="more_product">More Product</string>
    <string name="no">No</string>
    <string name="total">Total</string>
    <string name="total1">Total</string>
    <string name="complete_order">Complete Order</string>
    <string name="product_detials">Product Detials</string>
    <string name="cart">Cart</string>
    <string name="products">Products</string>
    <string name="confirm">Confirm</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="order_time">Order Time</string>
    <string name="order_number">Order Num</string>
    <string name="no_data_to_show">No Data  To Show</string>
    <string name="details">Detials</string>
    <string name="town">Town</string>
    <string name="Governate">Governate</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_product_image">Add Product Images</string>
    <string name="product_image">Product Images</string>
    <string name="name">Name</string>
    <string name="product_title">Product Title</string>
    <string name="main_category">Main Category</string>
    <string name="write_here">Write Here</string>
    <string name="add_new_product">Add Product</string>
    <string name="inv_link">Invaild Link</string>
    <string name="next">Next</string>
    <string name="all">All</string>
    <string name="show_all">Show All</string>
    <string name="details2">Detials</string>
    <string name="location">Location :</string>
    <string name="orderDetails">Order Detials</string>
    <string name="edit">Edit</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="remove">Remove</string>
</resources>