<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey3"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/font_bold"
                        android:text="@string/welcome_to_the_application_filter"

                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/please_choose_user_type"


                        android:textColor="@color/grey10"
                        android:textSize="15sp" />

                    <FrameLayout
                        android:id="@+id/fluser"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/rounded_white_stroke_primary"
                        android:padding="7dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/image"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"

                                    android:fontFamily="@font/font_bold"
                                    android:text="@string/user"

                                    android:textColor="@color/black"
                                    android:textSize="20sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/font_regular"

                                    android:text="@string/enjoy_alert_services_for_filter_change_dates_as_well_as_purchase_from_the_store"

                                    android:textColor="@color/grey10"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/image"
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:src="@drawable/user"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </FrameLayout>
                    <FrameLayout
                        android:id="@+id/flMarket"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_white_stroke_grey7"
                        android:padding="7dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/image1"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"

                                    android:fontFamily="@font/font_bold"
                                    android:text="@string/merchant"

                                    android:textColor="@color/black"
                                    android:textSize="20sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/font_regular"

                                    android:text="@string/sell_your_product"

                                    android:textColor="@color/grey10"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/image1"
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:src="@drawable/marchent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </FrameLayout>
                    <Button
                        android:id="@+id/btnSignup"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"

                        android:layout_marginTop="70dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/btn_enabled"
                        android:enabled="true"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/let_s_start"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"

                        />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:alpha=".5"
                android:background="@drawable/shadow_top" />

        </FrameLayout>

    </LinearLayout>


</layout>