<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.app.filtar.model.LoginModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_regular"
            android:text="@string/we_sent_an_code_to_verify_yor_phone"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:text='@{"("+model.phone_code+")"}'
                android:textColor="@color/black"
                android:textSize="14sp"

                />

            <androidx.legacy.widget.Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text='@{model.phone}'
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />


        </LinearLayout>

        <ImageView
            android:layout_width="162dp"
            android:layout_height="140dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/verification_image"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/font_bold"
            android:text="@string/enter_your_verification_code"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <com.chaos.view.PinView
            android:id="@+id/edtCode"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            app:cursorColor="@color/colorPrimaryDark"
            app:cursorWidth="2dp"
            app:itemCount="6"
            app:itemHeight="30dp"
            app:itemSpacing="15dp"
            app:itemWidth="30dp"
            app:lineColor="@color/grey7"
            app:lineWidth="2dp"
            app:viewType="line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="00:00"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/tvResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/resend"
                android:textColor="@color/color1"
                android:textSize="15sp" />

        </LinearLayout>
        <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_enabled"
            android:enabled="false"
            android:fontFamily="@font/font_regular"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</layout>