<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />


    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"

        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"

            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">


                <LinearLayout
                    android:id="@+id/llTerms"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_terms" />

                    <androidx.legacy.widget.Space
                        android:layout_width="12dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/terms_and_conditions"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/hor_line"
                    android:layerType="software"

                    />

                <LinearLayout
                    android:id="@+id/llPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_privacy" />

                    <androidx.legacy.widget.Space
                        android:layout_width="12dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/hor_line"
                    android:layerType="software"

                    />

                <LinearLayout
                    android:id="@+id/llContactUs"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_info" />

                    <androidx.legacy.widget.Space
                        android:layout_width="12dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/about_us"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/hor_line"
                    android:layerType="software"

                    />

                <LinearLayout
                    android:id="@+id/llRateApp"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_rate" />

                    <androidx.legacy.widget.Space
                        android:layout_width="12dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/rate_app"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/hor_line"
                    android:layerType="software"

                    />

                <LinearLayout
                    android:id="@+id/llShareApp"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_share" />

                    <androidx.legacy.widget.Space
                        android:layout_width="12dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/share_app"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="72dp"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/follow_us"
                    android:textColor="@color/black"
                    android:textSize="18sp"

                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageSnapChat"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/snapchat"

                        />

                    <androidx.legacy.widget.Space
                        android:layout_width="16dp"
                        android:layout_height="0dp" />


                    <ImageView
                        android:id="@+id/imageTwitter"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/twitter"

                        />

                    <androidx.legacy.widget.Space
                        android:layout_width="16dp"
                        android:layout_height="0dp" />

                    <ImageView
                        android:id="@+id/imageInstagram"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/instagram"

                        />

                    <androidx.legacy.widget.Space
                        android:layout_width="16dp"
                        android:layout_height="0dp" />

                    <ImageView
                        android:id="@+id/imageFacebook"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/facebook"

                        />


                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </FrameLayout>


</layout>